# portfolio

./: .gitignore  AGENTS.md  LICENSE  README.md  das  groq_test.py  module10.py  module11_requirements.txt  module2.py  module2_reading.md  module3.py  module3_reading.md  module4.py  module5.py  module5_reading.md  module6.md  module6.py  module7.py  module7_test.py  module8.py  requirements.txt  syllabus.md  unpop.py
2026/advay/: .gitignore  AGENTS.md  README.md  plan.md  progress.md  pyproject.toml
2026/advay/.codex/: config.toml
2026/advay/advay_platform/: __init__.py  api.py  config.py  errors.py  health.py
2026/advay/advay_platform/cache/: __init__.py  base.py  redis_adapter.py
2026/advay/advay_platform/db/: __init__.py  neo4j.py  postgres.py
2026/advay/advay_platform/loaders/: __init__.py  collections_daily.py  contracts.py  seed.py
2026/advay/advay_platform/schemas/: kpi.py
2026/advay/advay_platform/services/: __init__.py  freshness.py  metrics.py
2026/advay/advay_platform/tools/: __init__.py  get_kpi.py
2026/advay/apps/api/: main.py
2026/advay/apps/ui/: app.py
2026/advay/data/mock/: collections_daily.csv  expected_kpis.json
2026/advay/docs/: blueprint.md  plan.md
2026/advay/docs/contracts/: data_contracts.md  runtime_config.md  service_contracts.md  tool_contracts.md
2026/advay/docs/tasks/: phase_1_setup.md  phase_2_data_backbone.md
2026/advay/infra/docker/: docker-compose.postgres.yml
2026/advay/infra/sql/: 001_phase2_backbone.sql  002_phase2_indexes.sql  (+1 more)
2026/advay/tests/: conftest.py  test_phase1_api.py  test_phase2_backbone.py
(+225 files in other folders)
