[project]
name = "advay-platform"
version = "0.1.0"
description = "Phase 1 foundation for the Advay NBFC enterprise decision platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.34,<1.0",
    "streamlit>=1.44,<2.0",
    "redis>=5.2,<6.0",
    "psycopg[binary]>=3.2,<4.0",
    "neo4j>=5.28,<6.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["advay_platform*"]
